@@ -22,6 +22,7 @@ import java.nio.file.Paths;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
@@ -129,8 +130,8 @@ public class GenerateOsgiManifestMojo extends AbstractGenerateOsgiManifestMojo {
                 logProvidedArtifactsIncluded(artifactsToInclude, providedArtifactsFromManifest(wantedProvidedArtifact.get().getFile()));
             } else if (! suppressWarningMissingImportPackages && jdisc_core.isEmpty()) {
                 // TODO: Remove jdisc_core clause above and instead add suppressWarning to necessary vespa modules.
-                warnOrThrow(("This project does not have '%s' as provided dependency, so the generated 'Import-Package' " +
-                        "OSGi header may be missing important packages.").formatted(wantedProvidedDependency()));
+                warnOrThrow(String.format(Locale.ROOT, "This project does not have '%s' as provided dependency, so the generated 'Import-Package' " +
+                        "OSGi header may be missing important packages.", wantedProvidedDependency()));
             }
 
             logOverlappingPackages(projectPackages, exportedPackagesFromProvidedDeps);
@@ -198,7 +199,7 @@ public class GenerateOsgiManifestMojo extends AbstractGenerateOsgiManifestMojo {
 
     private void logNonPublicApiUsage(List<String> nonPublicApiUsed) {
         if (suppressWarningPublicApi || effectiveBundleType() != BundleType.USER || nonPublicApiUsed.isEmpty()) return;
-        warnOrThrow("This project uses packages that are not part of Vespa's public api: %s".formatted(nonPublicApiUsed));
+        warnOrThrow(String.format(Locale.ROOT, "This project uses packages that are not part of Vespa's public api: %s", nonPublicApiUsed));
     }
 
     private static String publicApi(PackageTally tally) {
@@ -298,7 +299,7 @@ public class GenerateOsgiManifestMojo extends AbstractGenerateOsgiManifestMojo {
         List<Artifact> unsupportedArtifacts = nonJarArtifacts.stream().filter(a -> ! a.getType().equals("pom"))
                 .toList();
 
-        unsupportedArtifacts.forEach(artifact -> warnOrThrow(String.format("Unsupported artifact '%s': Type '%s' is not supported. Please file a feature request.",
+        unsupportedArtifacts.forEach(artifact -> warnOrThrow(String.format(Locale.ROOT, "Unsupported artifact '%s': Type '%s' is not supported. Please file a feature request.",
                                                                            artifact.getId(), artifact.getType())));
     }
 
